syntax = "proto3";

package insurance;

import "google/protobuf/timestamp.proto";

message Vehicle {
  int64 id = 1;
  int64 owner_id = 2;
  string brand = 3;
  string model = 4;
  int32 year = 5;
  string engine_power = 6;
  int32 seats = 7;
  string chassis_number = 8;
  string license_plate = 9;
  string energy = 10;
  string vehicle_type = 11;
  int32 wilaya = 12;
  double valeur_venale = 13;
  bool paiement_ccp = 14;
  bool moins_25_ans = 15;
  bool permis_plus_1an = 16;
  string carte_grise_path = 17;
}

message CreateVehicleRequest { Vehicle vehicle = 1; }
message CreateVehicleResponse { Vehicle vehicle = 1; }
message GetVehicleRequest { int64 id = 1; }
message GetVehicleResponse { Vehicle vehicle = 1; }
message UpdateVehicleRequest { Vehicle vehicle = 1; }
message UpdateVehicleResponse { Vehicle vehicle = 1; }
message DeleteVehicleRequest { int64 id = 1; }
message DeleteVehicleResponse {}

service VehicleService {
  rpc CreateVehicle(CreateVehicleRequest) returns (CreateVehicleResponse);
  rpc GetVehicle(GetVehicleRequest) returns (GetVehicleResponse);
  rpc UpdateVehicle(UpdateVehicleRequest) returns (UpdateVehicleResponse);
  rpc DeleteVehicle(DeleteVehicleRequest) returns (DeleteVehicleResponse);
}
